Renamed interfaces to traits as that reflects their use better than just an interface. Fixed multiple bugs related to symbol tables and symbol operations. Regions are now a fixed part of the operation and the count of regions can not be changed after creation of an operation. Added functionality to cast operations to their implementation type and or interface traits (even though this feature will probably be removed).
Working CFG generation